# mcp-next-query-proposer

./: Cargo.toml  README.md
src/: lib.rs  main.rs  model.rs  proposer.rs  session.rs  types.rs  validate.rs
tests/: ac1_drill.rs  ac2_compare.rs  ac3_validation.rs  ac4_count.rs  ac5_strategy.rs  ac6_exhausted.rs  bench_perf.rs  helpers.rs
tests/fixtures/: model.json  session_compare.json  session_drill.json  session_exhausted.json  session_pivot.json  summary_high_cardinality.json  summary_low_cardinality.json
